[package]
name = "zenoh-dissector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wsdf = "0.1.2"
wsdf = {path = "/home/circle/Workings/ZettaScale/project/dissector/wsdf/wsdf"}
epan-sys = {path = "/home/circle/Workings/ZettaScale/project/dissector/wsdf/epan-sys"}
zenoh = {path="/home/circle/Workings/ZettaScale/src/zenoh-new-protocol/zenoh"}
zenoh-protocol = {path="/home/circle/Workings/ZettaScale/src/zenoh-new-protocol/commons/zenoh-protocol"}
zenoh-codec = {path="/home/circle/Workings/ZettaScale/src/zenoh-new-protocol/commons/zenoh-codec"}
zenoh-buffers = {path="/home/circle/Workings/ZettaScale/src/zenoh-new-protocol/commons/zenoh-buffers"}
derives = {path="./derives"}
anyhow = "1.0.75"


# [lib]
# crate-type = ["cdylib"]

[[example]]
name = "simple_struct"
crate-type = ["cdylib"]

[[example]]
name = "dev_dissect"
crate-type = ["cdylib"]
