[package]
name = "zenoh-dissector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epan-sys = {path = "/home/circle/Workings/ZettaScale/project/dissector/wsdf/epan-sys"}
zenoh = {path="/home/circle/Workings/ZettaScale/src/zenoh/zenoh"}
zenoh-protocol = {path="/home/circle/Workings/ZettaScale/src/zenoh/commons/zenoh-protocol"}
zenoh-codec = {path="/home/circle/Workings/ZettaScale/src/zenoh/commons/zenoh-codec"}
zenoh-buffers = {path="/home/circle/Workings/ZettaScale/src/zenoh/commons/zenoh-buffers"}
anyhow = "1.0.75"
convert_case = "0.6.0"


[lib]
crate-type = ["cdylib"]
